--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -181,3 +181,17 @@ input{
 .alert-notice{
 	margin-top: 40px;
 }
+
+/* Users index */
+.users{
+	list-style: none;
+	margin: 0;
+	li {
+		overflow:auto;
+		padding: 10px 0;
+		border-top: 1px solid $grayLight;
+		&:last-child {
+			border-bottom: 1px solid $grayLight;
+		}		
+	}
+}
