Add user microposts

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,11 @@
 
-<% if @user.errors.any? %>
+<% if object.errors.any? %>
 	<div  id="error_explanation">
 		<div class="alert alert-error">
-			The count error messagess: <%= pluralize(@user.errors.count,"error") %>
+			The count error messagess: <%= pluralize(object.errors.count,"error") %>
 		</div>
 		<ul>
-			<% @user.errors.full_messages.each do |msg| %>
+			<% object.errors.full_messages.each do |msg| %>
 				<li>* <%= msg %></li>
 			<% end %>
 		</ul>
