--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,7 +122,7 @@ aside{
 		border-top: 1px solid $grayLight;
 		&:first-child{
 			border:0;
-			padding-top: 0;
+			padding-top: 60px;
 		}
 		span{
 			display: block;
@@ -194,4 +194,39 @@ input{
 			border-bottom: 1px solid $grayLight;
 		}		
 	}
+}
+
+/* microposts */
+
+.microposts{
+	list-style: none;
+	margin: 10px 0 0 0;
+
+	li {
+		padding: 10px 0;
+		border-top: 1px solid #e8e8e8;
+	}
+}
+
+.content{
+	display: block;
+}
+
+.time{
+	color: $grayLight;
+}
+
+.gravatar{
+	float: left;
+	margin-right: 10px;
+}
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
+
+.span8{
+	margin-top: 40px;
 }
