--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,4 +9,14 @@
 			</h1>  
 		</section>
 	</aside> 
+
+	<div class="span8">
+		<% if @microposts.any? %>
+			<h1>Microposts (<%= @microposts.count %>)</h1>
+			<ol class="microposts">
+				<%= render @microposts %>
+			</ol>
+			<%= will_paginate @microposts %>
+		<% end %>
+	</div>
 </div>
